force-app/main/default/objects/BMCServiceDesk__Priority__c/BMCServiceDesk__Priority__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for priority records.</description>
    <label>Priority</label>
    <nameField>
        <label>Priority</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>