force-app/main/default/objects/BMCServiceDesk__Priority__c/fields/BMCServiceDesk__description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__description__c</fullName>
    <inlineHelpText>Use this field to enter a description of the priority. The description should indicate the importance of the record assigned with the priority.</inlineHelpText>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>