force-app/main/default/objects/BMCServiceDesk__Priority__c/fields/BMCServiceDesk__FKImpact__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKImpact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKImpact</label>
    <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
    <relationshipLabel>Priorities</relationshipLabel>
    <relationshipName>Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>