force-app/main/default/objects/BMCServiceDesk__Priority__c/fields/BMCServiceDesk__FKUrgency__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUrgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FKUrgency</label>
    <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
    <relationshipLabel>Priorities</relationshipLabel>
    <relationshipName>Priorities</relationshipName>
    <type>Lookup</type>
</CustomField>