force-app/main/default/objects/BMCServiceDesk__Priority__c/fields/BMCServiceDesk__priorityDuration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__priorityDuration__c</fullName>
    <inlineHelpText>Use this field to enter the amount of time that must be used to calculate the due date for the record assigned with the current priority. The value must be typed in this format: HH:MM.</inlineHelpText>
    <label>Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>