force-app/main/default/objects/BMCServiceDesk__Priority__c/fields/BMCServiceDesk__recommendedFixDuration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__recommendedFixDuration__c</fullName>
    <label>Recommended Fix Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>