force-app/main/default/objects/BMCServiceDesk__Priority__c/fields/BMCServiceDesk__urgency_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__urgency_Id__c</fullName>
    <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the speed of response that is associated with all records that are assigned with the current priority.</inlineHelpText>
    <label>Urgency</label>
    <type>Text</type>
</CustomField>