force-app/main/default/objects/BMCServiceDesk__Priority__c/validationRules/BMCServiceDesk__aPriorityID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__aPriorityID_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(OR(ISBLANK(Name), ISNULL(Name)), NOT(ISNUMBER(Name)))</errorConditionFormula>
    <errorMessage>Please enter a numeric value in the Priority field.</errorMessage>
</ValidationRule>