force-app/main/default/objects/BMCServiceDesk__Priority__c/validationRules/BMCServiceDesk__bDescription_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__bDescription_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK(BMCServiceDesk__description__c) , ISNULL(BMCServiceDesk__description__c) )</errorConditionFormula>
    <errorMessage>Please enter Description.</errorMessage>
</ValidationRule>