force-app/main/default/objects/BMCServiceDesk__Priority__c/validationRules/BMCServiceDesk__cImpact_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__cImpact_ID_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( BMCServiceDesk__impact_Id__c ) , ISNULL( BMCServiceDesk__impact_Id__c ) )</errorConditionFormula>
    <errorMessage>Please enter Impact.</errorMessage>
</ValidationRule>