force-app/main/default/objects/BMCServiceDesk__Priority__c/validationRules/BMCServiceDesk__dUrgency_ID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__dUrgency_ID_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( BMCServiceDesk__urgency_Id__c) , ISNULL( BMCServiceDesk__urgency_Id__c ) )</errorConditionFormula>
    <errorMessage>Please enter Urgency.</errorMessage>
</ValidationRule>