force-app/main/default/objects/BMCServiceDesk__Priority__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__description__c</columns>
    <columns>BMCServiceDesk__FKImpact__c</columns>
    <columns>BMCServiceDesk__FKUrgency__c</columns>
    <columns>BMCServiceDesk__priorityDuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>